Remove link to ai-debate.ps1 in footer

--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 
   <footer>
     Claude (Anthropic) vs. Gemini (Google) &mdash; February 28, 2026<br>
-    Generated with <a href="https://github.com/spinchange/MyJo">ai-debate.ps1</a> &mdash; a PowerShell tool that pipes AI models against each other and journals the results
+    Generated with ai-debate.ps1 &mdash; a PowerShell tool that pipes AI models against each other and journals the results
   </footer>
 
 </div>
